--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
     "stats.js": "^0.17.0",
     "three": "^0.161.0"
   },
-  "homepage": "https://ch920026.github.io/website"
+  "homepage": "https://ch920026.github.io/testWeb"
 }
